--- a/SecureDocumentPdf/SecureDocumentPdf.csproj
+++ b/SecureDocumentPdf/SecureDocumentPdf.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Actions\**" />
+    <Content Remove="Actions\**" />
+    <EmbeddedResource Remove="Actions\**" />
+    <None Remove="Actions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Services\SecurisationDocument.cs" />
   </ItemGroup>
 
