--- a/SecureDocumentPdf/SecureDocumentPdf - Backup.csproj
+++ b/SecureDocumentPdf/SecureDocumentPdf - Backup.csproj
@@ -11,6 +11,24 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\barre_tchad-removebg-preview.png" />
+    <Content Remove="wwwroot\images\barre_tchad.jpg" />
+    <Content Remove="wwwroot\images\logo_ministere_1.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\images\barre_tchad-removebg-preview.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="wwwroot\images\barre_tchad.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="wwwroot\images\logo_ministere_1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Markdig" Version="0.42.0" />
@@ -34,21 +52,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\Images\barre_tchad-removebg-preview.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\Images\barre_tchad.jpg">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\Images\drapeau tchad.jpeg">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\Images\logo_ministere.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\Images\logo_ministere_1.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
+    <EmbeddedResource Include="wwwroot\images\drapeau tchad.jpeg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <None Include="wwwroot\images\logo_ministere.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
