Ajout du Viewer PDF + Transfert de fichier

--- a/SecureDocumentPdf/appsettings.json
+++ b/SecureDocumentPdf/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "Logging": { "LogLevel": { "Default": "Debug" } },
+  "PdfSecurity": {
+    "TokenExpirationMinutes": 120,
+    "EnableWatermark": false
+  }
 }
